Fixed slight missalignment of years on navigator

--- a/site/pages/about-us/timeline-slice/navigator/item/style.css
+++ b/site/pages/about-us/timeline-slice/navigator/item/style.css
@@ -9,7 +9,7 @@
   composes: sansSerifBold from "../../../../../css/typography/_fonts.css";
 	composes: fontXS from "../../../../../css/typography/_fonts.css";
   transition: 0.3s ease-in-out;
-  left: -15px;
+  left: -20px;
   cursor: pointer;
 }
 
@@ -58,6 +58,7 @@
   position: absolute;
   cursor: pointer;
   background-color: #CCC;
+  left: -5px;
  }
 
 .old span,
